log/build_2026-03-26_10-31-44/green_vision/stdout_stderr.log
running egg_info
writing ../../build/green_vision/green_vision.egg-info/PKG-INFO
writing dependency_links to ../../build/green_vision/green_vision.egg-info/dependency_links.txt
writing entry points to ../../build/green_vision/green_vision.egg-info/entry_points.txt
writing requirements to ../../build/green_vision/green_vision.egg-info/requires.txt
writing top-level names to ../../build/green_vision/green_vision.egg-info/top_level.txt
reading manifest file '../../build/green_vision/green_vision.egg-info/SOURCES.txt'
writing manifest file '../../build/green_vision/green_vision.egg-info/SOURCES.txt'
running build
running build_py
copying green_vision/green_vision.py -> /home/pi/ros2_ws/build/green_vision/build/lib/green_vision
running install
running install_lib
copying /home/pi/ros2_ws/build/green_vision/build/lib/green_vision/green_vision.py -> /home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision
byte-compiling /home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision/green_vision.py to green_vision.cpython-310.pyc
  File "/home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision/green_vision.py", line 78
    self.get_logger().error(fjkkk"Failed to process image: {e}")
                                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax

running install_data
running install_egg_info
removing '/home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/green_vision/green_vision.egg-info to /home/pi/ros2_ws/install/green_vision/lib/python3.10/site-packages/green_vision-0.0.0-py3.10.egg-info
running install_scripts
Installing green_vision script to /home/pi/ros2_ws/install/green_vision/lib/green_vision
writing list of installed files to '/home/pi/ros2_ws/build/green_vision/install.log'
